--- a/README
+++ b/README
@@ -22,6 +22,17 @@ If you are using an older version of ubuntu, then you need to compile and
 install LLVM/clang from source.
 
 
+Preparing:
+
+Grab the latest release and extract it or get the source from
+the git repository as follows.  This process requires autoconf,
+automake, libtool and pkg-config.
+
+	git clone https://github.com/yaozhujia/ppcg.git
+	cd ppcg
+	./autogen.sh
+
+
 Compilation:
 
 	./configure
